--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,11 @@ dependencies:
   flutter_secure_storage: ^4.2.0
   flutter_svg: ^0.22.0
   font_awesome_flutter: ^8.8.1
-
+  image_picker: ^0.6.7+4
+  json_annotation: 3.1.1
 dev_dependencies:
+  build_runner:
+  json_serializable: 3.5.1
   flutter_test:
     sdk: flutter
 
@@ -53,6 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.png
+    - assets/asma.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
