--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,16 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  google_fonts: ^1.1.0
   http: ^0.12.1
   logger: ^0.9.1
-  flutter_secure_storage: ^4.2.0
+  flutter_secure_storage: ^3.3.3
   flutter_svg: ^0.22.0
-  font_awesome_flutter: ^8.8.1
+  font_awesome_flutter: ^9.1.0
   image_picker: ^0.6.7+4
   json_annotation: 3.1.1
 dev_dependencies:
-  build_runner:
+  build_runner: ^1.10.9
   json_serializable: 3.5.1
   flutter_test:
     sdk: flutter
