--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   location: ^3.0.0
   image_picker: ^0.6.7+4
   json_annotation: 3.1.1
+  firebase_messaging: ^7.0.3
+  lottie: ^0.6.0
+
 dev_dependencies:
   build_runner: ^1.10.0
   json_serializable: 3.5.1
@@ -60,7 +63,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.png
+    - assets/logo2.png
+    - assets/logo3.png
+    - assets/logo4.png
+
     - assets/asma.jpg
+    - assets/patient.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
